--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,7 +5,7 @@ body{
     font-family: Courier;
 =======
     text-align: left;
-    font-family: verdana ;
+    font-family:  "Arial";
     color: #333;
 }
 
